--- a/Pipfile
+++ b/Pipfile
@@ -5,10 +5,13 @@ verify_ssl = true
 
 [dev-packages]
 types-pyyaml = "*"
+types-attrs = "*"
+types-requests = "*"
 
 [packages]
 attrs = "*"
 pyyaml = "*"
+requests = "*"
 
 [requires]
 python_version = "3.8"
