--- a/mypy.ini
+++ b/mypy.ini
@@ -20,3 +20,9 @@ show_column_numbers = true
 # exclude imports
 [mypy-yaml.*]
 ignore_missing_imports = True
+
+[mypy-requests.*]
+ignore_missing_imports = True
+
+[mypy-attr.*]
+ignore_missing_imports = True
