--- a/Pipfile
+++ b/Pipfile
@@ -8,13 +8,13 @@ types-pyyaml = "*"
 types-attrs = "*"
 types-requests = "*"
 pytest = "*"
+pytest-cov = "*"
 
 [packages]
 attrs = "*"
 pyyaml = "*"
 requests = "*"
 click = "*"
-thoth-common = "*"
 
 [requires]
 python_version = "3.8"
