combine results with GitHub license #34

--- a/Pipfile
+++ b/Pipfile
@@ -11,10 +11,10 @@ pytest = "*"
 pytest-cov = "*"
 
 [packages]
-attrs = "*"
 pyyaml = "*"
 requests = "*"
 click = "*"
+thoth-common = "*"
 
 [requires]
 python_version = "3.8"
